<resources>
    <string name="app_name">Project1part2</string>
    <string name="name">Student name</string>
    <string name="quiz">Total quiz score</string>
    <string name="assignment">Total assignment score</string>
    <string name="midterm">Midterm exam score</string>
    <string name="finalExam">Final exam score</string>
    <string name="button">Calculate Grade</string>
    <string name="textview">TextView</string>
</resources>
